package com.ToDo.enums;

public enum TaskStatus {
    SCHEDULED,
    IN_PROGRESS,
    COMPLETED
}
