package com.ToDo.exception;

public class TaskNotFoundException extends RuntimeException{
}
