package com.ToDo.model;

public class Activity {
}
